--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,7 @@ Standards-Version: 3.9.1
 Package: mauvealert-server
 Architecture: any
 Pre-Depends: libjs-jquery
-Depends: adduser, lsb-base, ruby | ruby-interpreter, ruby-bundler, libpq5, ${misc:Depends}
+Depends: adduser, lsb-base, ruby | ruby-interpreter, ruby-bundler, ${shlibs:Depends}, ${misc:Depends}
 Suggests: mauvealert-client
 Recommends: ruby-locale | liblocale-ruby1.8
 Description: Mauve network alert system -- server
