Update mauveserver.conf to use new document root of /srv/mauvealert
Also update various configuration items to be more normal.

--- a/etc/mauveserver.conf
+++ b/etc/mauveserver.conf
@@ -6,7 +6,7 @@
 #
 server {
   # 
-  # persistent data store, only sqlite3 supported at the moment
+  # persistent data store
   #
   database "sqlite3:///var/lib/mauvealert/alerts.db"
 
@@ -20,9 +20,9 @@ server {
 
   # few options for web interface, just the TCP port number
   web_interface {
-    ip "0.0.0.0"
+    ip "127.0.0.1"
     port 1288
-    document_root  "/usr/share/mauvealert"
+    document_root  "/srv/mauvealert"
   }
 }
 
