--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,6 +3,17 @@ stages:
   - package
   - publish
 
+codeclimate:
+  image: $CI_REGISTRY/docker-images/layers:stretch-codeclimate
+  stage: test
+  tags:
+    - docker-socket
+  script:
+    - codeclimate analyze -f json > codeclimate.json
+  artifacts:
+    paths: [codeclimate.json]
+
+
 .test: &test
   image: $CI_REGISTRY/docker-images/layers:$DISTRO-ruby
   stage: test
@@ -37,6 +48,17 @@ test:stretch:
   artifacts:
     paths:
       - pkg/
+
+package:gem:
+  stage: package
+  image: $CI_REGISTRY/docker-images/layers:jessie-ruby
+  artifacts:
+    paths:
+      - pkg
+  script:
+    - package
+  variables:
+    GEMFILE: mauve.gemspec
 
 package:jessie:
   <<: *package
