--- a/etc/mauveserver.conf
+++ b/etc/mauveserver.conf
@@ -37,7 +37,7 @@ server {
 
 
   #
-  # This is the processing thread, which recieves packets, and updates the
+  # This is the processing thread, which receives packets, and updates the
   # database as needed.
   #
   processor {
@@ -133,7 +133,7 @@ logger {
   # correspond to the class name.  The options in each outputter correspond to
   # the "hash" arguments for that particular outputter class.
   #
-  # Additionally each outputter can have a level, and format assoicated.
+  # Additionally each outputter can have a level, and format associated.
   #
   outputter("stdout") {
     level    Log4r::INFO
